--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "vite-plugin-pwa": "^1.0.2"
   },
   "homepage": "https://ivan-555.github.io/Notizbuch/"
 }
